--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
             background-color: rgb(246, 246, 164);
         }
         h1{color:rgb(32, 32, 174)}
-        h2{color:rgb(244, 6, 6)}
-        h3{color:rgb(10, 161, 237)}
+        .reg{color:rgb(6, 6, 238)}
+        .c{color:rgb(17, 112, 208)}
+        .sr{color:rgb(22, 123, 120)}
+        h3{color:rgb(5, 216, 244)}
     </style>
 </head>
 <body>
     <h1>Aishani Singh</h1>
-    <h2>&nbsp;&nbsp;Registration Number: 24BDS0181</h2>
-    <h2>&nbsp;&nbsp;Courses</h2>
-    <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sr no.&nbsp;&nbsp;&nbsp;&nbsp;Name</h2>
+    <h2 class="reg">&nbsp;&nbsp;Registration Number: 24BDS0181</h2>
+    <h2 class="c">&nbsp;&nbsp;Courses</h2>
+    <h2 class="sr">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sr no.&nbsp;&nbsp;&nbsp;&nbsp;Name</h2>
     <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1.&nbsp;&nbsp;&nbsp;&nbsp;Web Programming</h3>
     <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.&nbsp;&nbsp;&nbsp;&nbsp;Theory Of Computation</h3>
     <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3.&nbsp;&nbsp;&nbsp;&nbsp;Computation Architecture and Organisations</h3>
@@ -24,3 +26,4 @@
     <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;6.&nbsp;&nbsp;&nbsp;&nbsp;Probability and Statistics</h3>
 </body>
 </html>
+
