--- a/index.html
+++ b/index.html
@@ -5,25 +5,65 @@
     <style>
         body {
             background-color: rgb(246, 246, 164);
+            font-family: Arial, sans-serif;
         }
-        h1{color:rgb(32, 32, 174)}
-        .reg{color:rgb(6, 6, 238)}
-        .c{color:rgb(17, 112, 208)}
-        .sr{color:rgb(22, 123, 120)}
-        h3{color:rgb(5, 216, 244)}
+
+        h1 {
+            color: rgb(32, 32, 174);
+            font-size: 38px;
+            text-align: center;
+            font-weight: 800;
+        }
+
+        h3.reg {
+            color: rgb(6, 6, 238);
+            font-size: 28px;
+            margin-bottom: 5px;
+        }
+
+        ul {
+            font-size: 18px;
+            color: rgb(17, 112, 208);
+            margin-top: 5px;
+        }
+
+        header {
+            background-color: rgb(32, 32, 174);
+            color: white;
+            padding: 15px;
+            text-align: center;
+            font-size: 26px;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
     </style>
 </head>
+
 <body>
+
+    <header>
+        Student Profile
+    </header>
+
     <h1>Aishani Singh</h1>
-    <h2 class="reg">&nbsp;&nbsp;Registration Number: 24BDS0181</h2>
-    <h2 class="c">&nbsp;&nbsp;Courses</h2>
-    <h2 class="sr">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sr no.&nbsp;&nbsp;&nbsp;&nbsp;Name</h2>
-    <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1.&nbsp;&nbsp;&nbsp;&nbsp;Web Programming</h3>
-    <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.&nbsp;&nbsp;&nbsp;&nbsp;Theory Of Computation</h3>
-    <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3.&nbsp;&nbsp;&nbsp;&nbsp;Computation Architecture and Organisations</h3>
-    <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;4.&nbsp;&nbsp;&nbsp;&nbsp;Design and Analysis of Algorithms</h3>
-    <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;5.&nbsp;&nbsp;&nbsp;&nbsp;Microprocessors and Microcontrollers</h3>
-    <h3>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;6.&nbsp;&nbsp;&nbsp;&nbsp;Probability and Statistics</h3>
+    <hr>
+
+    <h3 class="reg">Student Details</h3>
+    <ul type="circle">
+        <li>Registration Number: 24BDS0181</li>
+        <li>Branch: CSE - Data Science</li>
+        <li>2nd Year</li>
+    </ul>
+
+    <h3 class="reg">Courses</h3>
+    <ul type="circle">
+        <li>Web Programming</li>
+        <li>Theory Of Computation</li>
+        <li>Computation Architecture and Organisation</li>
+        <li>Design and Analysis of Algorithms</li>
+        <li>Microprocessors and Microcontrollers</li>
+        <li>Probability and Statistics</li>
+    </ul>
+
 </body>
 </html>
-
